<resources>
    <string name="app_name">SmartCommuteAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_routes">Routes</string>
    <string name="title_trips">Trips</string>
    <string name="title_notifications">Notifications</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="launch_activity">Launch activity</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="title">Title</string>
    <string name="days">Days: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>

</resources>
