<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.r00ta.telematics.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.r00ta.telematics.android.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.r00ta.telematics.android.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.r00ta.telematics.android.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
