<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="387dp"
            android:layout_height="88dp"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/routeCarImage"
                android:layout_width="53dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_car" />

            <TextView
                android:id="@+id/routeStartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/startDate4"
                android:layout_marginStart="7dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/startDate4"
                android:text="@string/title"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/routeToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/routeStartLabel"
                android:layout_alignTop="@+id/startDate5"
                android:layout_alignBottom="@+id/startDate5"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-1dp"
                android:text="@string/title"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/startDate4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/routeCarImage"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/routeCarImage"
                android:text="@string/from"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/startDate5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startDate4"
                android:layout_marginStart="0dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/routeCarImage"
                android:text="@string/to"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/routeDaysHeader"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_alignStart="@+id/routeToLabel"
                android:layout_alignTop="@+id/startDate3"
                android:layout_alignBottom="@+id/startDate3"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/title"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/startDate3"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_alignBottom="@+id/routeCarImage"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="-1dp"
                android:layout_toEndOf="@+id/routeCarImage"
                android:text="@string/days"
                android:textSize="12sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/recordRouteTripBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:text="Record" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>